--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@
                 ><img
                   class="card-img-top fit-image"
                   src="images/us-unemployment-2001-2015.PNG"
-                  alt="Unemployment Rate in U.S. Counties, 2001-2015"
+                  alt="Unemployment Trends in the U.S., 2001-2015"
               /></a>
               <div class="card-body">
-                <h4 class="card-title">Unemployment Rate in U.S. Counties, 2001-2015</h4>
+                <h4 class="card-title">Unemployment Trends in the U.S., 2001-2015</h4>
                 <p class="card-text">
                   This map depicts TEST
                 </p>
@@ -161,7 +161,7 @@
             <div class="modal-dialog modal-lg">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h2 class="modal-title" id="exampleModalLabel">Unemployment Rate in U.S. Counties, 2001-2015</h2>
+                  <h2 class="modal-title" id="exampleModalLabel">Unemployment Trends in the U.S., 2001-2015</h2>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -220,10 +220,10 @@
                 ><img
                   class="card-img-top fit-image"
                   src="images/ca-employment-2010.PNG"
-                  alt="California Employment Patterns, 2010"
+                  alt="Employment Patterns in California, 2010"
               /></a>
               <div class="card-body">
-                <h4 class="card-title">California Employment Patterns, 2010</h4>
+                <h4 class="card-title">Employment Patterns in California, 2010</h4>
                 <p class="card-text">
                   This map depicts MORE
                 </p>
@@ -239,7 +239,7 @@
             <div class="modal-dialog modal-lg">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h2 class="modal-title" id="exampleModalLabel">California Employment Patterns, 2010</h2>
+                  <h2 class="modal-title" id="exampleModalLabel">Employment Patterns in California, 2010</h2>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -259,10 +259,10 @@
                 ><img
                   class="card-img-top fit-image"
                   src="images/patterns-economic-hardship-us-counties.PNG"
-                  alt="Patterns of Economic Hardship in the U.S., 2019"
+                  alt="Economic Hardship in the U.S., 2019"
               /></a>
               <div class="card-body">
-                <h4 class="card-title">Patterns of Economic Hardship in the U.S., 2019</h4>
+                <h4 class="card-title">Economic Hardship in the U.S., 2019</h4>
                 <p class="card-text">
                   This map documents the poverty rate in each U.S. county.
                 </p>
@@ -279,7 +279,7 @@
             <div class="modal-dialog modal-lg">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h2 class="modal-title" id="exampleModalLabel">Patterns of Economic Hardship in the U.S., 2019</h2>
+                  <h2 class="modal-title" id="exampleModalLabel">Economic Hardship in the U.S., 2019</h2>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -299,10 +299,10 @@
                 ><img
                   class="card-img-top fit-image"
                   src="images/median-rent-us-counties.PNG"
-                  alt="Renting in the USA, 2015"
+                  alt="Renting in the U.S., 2015"
               /></a>
               <div class="card-body">
-                <h4 class="card-title">Renting in the USA, 2015</h4>
+                <h4 class="card-title">Renting in the U.S., 2015</h4>
                 <p class="card-text">
                   This map shows average monthly rent prices in every county nationwide.
                 </p>
@@ -319,7 +319,7 @@
             <div class="modal-dialog modal-lg">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h2 class="modal-title" id="exampleModalLabel">Renting in the USA, 2015</h2>
+                  <h2 class="modal-title" id="exampleModalLabel">Renting in the U.S., 2015</h2>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
