--- a/index.html
+++ b/index.html
@@ -147,10 +147,10 @@
               <div class="card-body">
                 <h4 class="card-title">Unemployment Trends in the U.S., 2001-2015</h4>
                 <p class="card-text">
-                  This map depicts TEST
+                  This map shows how county-level unemployment rates across the U.S. changed from 2001 to 2015.
                 </p>
                 <p>
-                  It was generated in Leaflet using
+                  It was generated in Leaflet using a GeoJson file produced by joining data from the U.S. Census Bureau with U.S. county polygons.
                 </p>
               </div>
             </div>
