--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                   This map depicts the number of girls and boys enrolled in grades 1 through 8 in each county in Kenya.
                 </p>
                 <p>
-                  It was generated in Leaflet using
+                  It was generated in Leaflet using information from the Kenya Open Data Portal.
                 </p>
               </div>
             </div>
