--- a/index.html
+++ b/index.html
@@ -181,12 +181,12 @@
                 ><img
                   class="card-img-top fit-image"
                   src="images/kenya-schooling-gender.PNG"
-                  alt="Primary School Enrollment in Kenya by Gender"
+                  alt="Primary School Enrollment in Kenya by Gender, 2014"
               /></a>
               <div class="card-body">
-                <h4 class="card-title">Primary School Enrollment in Kenya by Gender</h4>
+                <h4 class="card-title">Primary School Enrollment in Kenya by Gender, 2014</h4>
                 <p class="card-text">
-                  This map depicts the number of girls and boys enrolled in grades 1 through 8 in each county in Kenya.
+                  This map depicts the number of girls and boys enrolled in grades 1 through 8 in each county in Kenya in 2014.
                 </p>
                 <p>
                   It was generated in Leaflet using information from the Kenya Open Data Portal.
@@ -200,7 +200,7 @@
             <div class="modal-dialog modal-lg">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h2 class="modal-title" id="exampleModalLabel">Primary School Enrollment in Kenya by Gender</h2>
+                  <h2 class="modal-title" id="exampleModalLabel">Primary School Enrollment in Kenya by Gender, 2014</h2>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
