--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 ><img
                   class="card-img-top fit-image"
                   src="images/global-covid-19-vaccine-apartheid.PNG"
-                  alt="Global Covid Vaccine Apartheid"
+                  alt="Global Covid-19 Vaccine Apartheid"
               /></a>
               <div class="card-body">
                 <h4 class="card-title">Global Covid-19 Vaccine Apartheid</h4>
