--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
       <div class="container text-center">
         <h1>Geographies of Inequality, Spaces of Hope</h1>
         <h2 class='fade-in'>"I have... to prove that society knows how injurious such conditions are to the health and the life
-                            of the workers, and yet does nothing to improve these conditions."—Friedrich Engels</h2>
+                            of the workers, and yet does nothing to improve these conditions."—Friedrich Engels, <i>The Condition of the Working Class in England</i> (1845)</h2>
         <p></p>
         <h2 class='fade-in'>"I had always thought that the purpose of More's <i>Utopia</i> was not to provide a blueprint for some future
                           but to hold up for inspection the ridiculous waste and foolishness of his times, to insist that things
-                          could and must be better."—David Harvey</h2>
+                          could and must be better."—David Harvey, <i>Spaces of Hope</i> (2000)</h2>
         <p></p>
         <h3 class = 'fade-in'>These two neighborhoods in Johannesburg, South Africa exemplify the side-by-side existence of affluence and deprivation. Photo: Johnny Miller, <a href = "https://unequalscenes.com/">Unequal Scenes</a></h3>
       </div>
