added covid storymap project

--- a/index.html
+++ b/index.html
@@ -96,6 +96,50 @@
               <a href="#" data-bs-toggle="modal" data-bs-target="#proj1"
                 ><img
                   class="card-img-top fit-image"
+                  src="images/global-covid-19-vaccine-apartheid-storymap.PNG"
+                  alt="Global Covid-19 Vaccine Apartheid Storymap"
+              /></a>
+              <div class="card-body">
+                <h4 class="card-title">Global Covid-19 Vaccine Apartheid Storymap</h4>
+                <p class="card-text">
+                  This map depicts unequal access to Covid-19 vaccines around the world, highlights whether
+                  governments supported or opposed an initiative to temporarily suspend intellectual property
+                  restrictions to boost the supply of lifesaving doses, shows where untapped
+                  vaccine production potential exists, and explores efforts to expand generic manufacturing.
+                </p>
+                <p>
+                  It was generated using the Mapbox Storytelling template, with GeoJSON files containing information about national vaccination rates
+                  (Our World in Data), governments' positions on the TRIPS waiver proposal at the WTO (Doctors Without Borders), the locations of
+                  idle mRNA manufacturing capacity (Doctors Without Borders and the Access IBSA project), and participants in the WHO-led mRNA vaccine technology transfer hub (Medicines Patent Pool).
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <!-- Modal for above card. -->
+          <div class="modal fade" id="proj1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h2 class="modal-title" id="exampleModalLabel">Global Covid-19 Vaccine Apartheid Storymap</h2>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <img src="images/global-covid-19-vaccine-apartheid-storymap.PNG" class="mw-100" alt="Preview of map.">
+                  <h5>Visit <a href="https://kwstancil.github.io/global-covid-19-vaccine-apartheid-storymap/">map</a></h5>
+                </div>
+                <!-- <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div> -->
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item">
+            <div class="card h-100">
+              <a href="#" data-bs-toggle="modal" data-bs-target="#proj1"
+                ><img
+                  class="card-img-top fit-image"
                   src="images/global-covid-19-vaccine-apartheid.PNG"
                   alt="Global Covid-19 Vaccine Apartheid"
               /></a>
