--- a/index.html
+++ b/index.html
@@ -74,10 +74,7 @@
     <!-- Welcome Section -->
     <header class = "text-white boss-image">
       <div class="container text-center">
-        <h1>Geographies of Inequality, Spaces of Hope</h1>
-        <h2 class='fade-in'>"I have... to prove that society knows how injurious such conditions are to the health and the life
-                            of the workers, and yet does nothing to improve these conditions."—Friedrich Engels, <i>The Condition of the Working Class in England</i> (1845)</h2>
-        <p></p>
+        <h1>Welcome!</h1>
         <h2 class='fade-in'>"I had always thought that the purpose of More's <i>Utopia</i> was not to provide a blueprint for some future
                           but to hold up for inspection the ridiculous waste and foolishness of his times, to insist that things
                           could and must be better."—David Harvey, <i>Spaces of Hope</i> (2000)</h2>
@@ -476,12 +473,12 @@
                 />
               </div>
               <p class="lead">
-                Hi, I'm Kenny. Born and raised in Denver, I moved to Tacoma for college and graduated from Pacific Lutheran University in 2013 with a degree in political science and global studies.
+                Hi, I'm Kenny. Born and raised in the Denver metro area, I moved to Tacoma for college and graduated from Pacific Lutheran University in 2013 with a bachelor's degree in political science and global studies.
                 I then pursued graduate study in geography and earned an MA in secondary social studies education from the University of Kentucky.
-                In 2020, after a few years of teaching civics and history at a public high school and working as a GIS analyst in Lexington, I joined the newsroom at <a target="_blank" href = "https://www.commondreams.org/">Common Dreams</a>, where I'm a staff writer.
+                I spent a few years teaching civics and history at a public high school and working as a GIS analyst in Lexington before joining the newsroom at <a target="_blank" href = "https://www.commondreams.org/author/kenny-stancil">Common Dreams</a>, where I've been a staff writer since 2020.
               </p>
               <p class="lead">
-                When I'm not writing or making maps, I enjoy spending time outdoors and keeping up with my beloved Colorado sports teams.
+                When I'm not writing or making maps, I enjoy spending time outdoors and keeping up with my beloved Colorado sports teams. I returned to my home state in 2022.
               </p>
             </div>
           </div>
