--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
               <p class="lead">
                 Hi, I'm Kenny. Born and raised in the Denver metro area, I moved to Tacoma for college and graduated from Pacific Lutheran University in 2013 with a bachelor's degree in political science and global studies.
                 I then pursued graduate study in geography and earned an MA in secondary social studies education from the University of Kentucky.
-                I spent a few years teaching civics and history at a public high school and working as a GIS analyst in Lexington before joining the newsroom at <a target="_blank" href = "https://www.commondreams.org/author/kenny-stancil">Common Dreams</a>, where I've been a staff writer since 2020.
+                I spent a few years teaching civics and history at a public high school and working as a GIS technician in Lexington before joining the newsroom at <a target="_blank" href = "https://www.commondreams.org/author/kenny-stancil">Common Dreams</a>, where I've been a staff writer since 2020.
               </p>
               <p class="lead">
                 When I'm not writing or making maps, I enjoy spending time outdoors and keeping up with my beloved Colorado sports teams. I returned to my home state in 2022.
