--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@
                   (Our World in Data), governments' positions on the TRIPS waiver proposal at the WTO (Doctors Without Borders), the locations of
                   idle mRNA manufacturing capacity (Doctors Without Borders and the Access IBSA project), and participants in the WHO-led mRNA vaccine technology transfer hub (Medicines Patent Pool).
                 </p>
+                <p>
+                  *Awarded first place in the annual student dynamic map competition at the 2022 North American Cartographic Information Society (NACIS) meeting
+                </p>
               </div>
             </div>
           </div>
