Revert "Update index.html"
This reverts commit d05c4d4bee9b082d1183eaac35e76df7edd48255.

--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
               <a href="#" data-bs-toggle="modal" data-bs-target="#proj9"
                 ><img
                   class="card-img-top fit-image"
-                  src="images/clean-energy-usa.PNG"
+                  src="images/clean-energy-usa-2.PNG"
                   alt="Renewable Energy Production in the U.S., 2021"
               /></a>
               <div class="card-body">
@@ -446,7 +446,7 @@
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                  <img src="images/clean-energy-usa.PNG" class="mw-100" alt="Preview of map.">
+                  <img src="images/clean-energy-usa-2.PNG" class="mw-100" alt="Preview of map.">
                   <h5>Visit <a href="https://kwstancil.github.io/renewable-energy-usa/">map</a></h5>
                 </div>
                 <!-- <div class="modal-footer">
