--- a/index.html
+++ b/index.html
@@ -477,11 +477,14 @@
               </div>
               <p class="lead">
                 Hi, I'm Kenny. Born and raised in the Denver metro area, I moved to Tacoma for college and graduated from Pacific Lutheran University in 2013 with a bachelor's degree in political science and global studies.
-                I then pursued graduate study in geography and earned an MA in secondary social studies education from the University of Kentucky.
-                I spent a few years teaching civics and history at a public high school and working as a GIS technician in Lexington before joining the newsroom at <a target="_blank" href = "https://www.commondreams.org/author/kenny-stancil">Common Dreams</a>, where I've been a staff writer since 2020.
+                I then pursued graduate study at the University of Kentucky, where I earned master's degrees in secondary social studies education and geography. During my time in Lexington, I spent a few years teaching
+                civics and history at a public high school and working as a GIS technician before joining the newsroom at <a target="_blank" href = "https://www.commondreams.org/author/kenny-stancil">Common Dreams</a>,
+                where I was a staff writer from 2020 to 2023. I'm now a senior researcher at the <a target="_blank" href = "https://therevolvingdoorproject.org/author/kenny-stancil/">Revolving Door Project</a>, a watchdog
+                group that bullies the government into bullying corporations.
               </p>
               <p class="lead">
-                When I'm not writing or making maps, I enjoy spending time outdoors and keeping up with my beloved Colorado sports teams. I returned to my home state in 2022.
+                I'm passionate about building an egalitarian, democratic, and sustainable society. I also enjoy spending time outdoors and keeping up with my beloved Colorado sports teams.
+                I returned to my home state in 2022.
               </p>
             </div>
           </div>
@@ -495,7 +498,11 @@
               <dd>PostGIS/SQL for data querying</dd>
               <dt>Web Mapping</dt>
               <dd>
-                Leaflet, Carto, Mapbox
+                Leaflet, D3, Carto, Mapbox
+              </dd>
+              <dt>Other Data Visualization Tools</dt>
+              <dd>
+                Datawrapper, Flourish
               </dd>
               <dt>Coding</dt>
               <dd>HTML, CSS, JavaScript</dd>
