--- a/index.html
+++ b/index.html
@@ -479,8 +479,7 @@
                 Hi, I'm Kenny. Born and raised in the Denver metro area, I moved to Tacoma for college and graduated from Pacific Lutheran University in 2013 with a bachelor's degree in political science and global studies.
                 I then pursued graduate study at the University of Kentucky, where I earned master's degrees in secondary social studies education and geography. During my time in Lexington, I spent a few years teaching
                 civics and history at a public high school and working as a GIS technician before joining the newsroom at <a target="_blank" href = "https://www.commondreams.org/author/kenny-stancil">Common Dreams</a>,
-                where I was a staff writer from 2020 to 2023. I'm now a senior researcher at the <a target="_blank" href = "https://therevolvingdoorproject.org/author/kenny-stancil/">Revolving Door Project</a>, a watchdog
-                group that bullies the government into bullying corporations.
+                where I was a staff writer from 2020 to 2023. I'm now a senior researcher at the <a target="_blank" href = "https://therevolvingdoorproject.org/author/kenny-stancil/">Revolving Door Project</a>, a public interest watchdog group.
               </p>
               <p class="lead">
                 I'm passionate about building an egalitarian, democratic, and sustainable society. I also enjoy spending time outdoors and keeping up with my beloved Colorado sports teams.
