--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 </p>
                 <p>
                   Both maps were made by joining U.S. Census Bureau shapefiles (ZIP Code Tabulation Areas and Counties) 
-                  with geocoded insurance data (from the Tresury Department's Federal Insurance Office and from a Senate Budget Committee investigation).
+                  with geocoded insurance data (from the Treasury Department's Federal Insurance Office and from a Senate Budget Committee investigation).
                   The resulting GeoJSON files were converted to PM tiles and displayed using MapLibre. The corresponding tables were created
                   in Datawrapper.
                 </p>
