--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
               <div class="card-body">
                 <h4 class="card-title">Global Climate Apartheid</h4>
                 <p class="card-text">
-                  This storymap explores three dimensions of climate injustice: 1. uneven reposnsibility for causing the crisis, 2. worse consequences for those who are least culpable,
+                  This storymap explores three dimensions of climate injustice: 1. uneven responsibility for causing the crisis, 2. worse consequences for those who are least culpable,
                   and 3. militaristic responses, including strengthened border enforcement aimed at barring climate migrants.
                 </p>
                 <p>
