--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
     <section id="mapping" class="bg-light">
       <div class="container text-center">
         <h2>Selected visualizations</h2>
+        <p></p>
+        <h4>(Click on an image to explore further)</h4>
+        <p></p>
         <div class="row">
 
           <div class="col-lg-4 col-md-6 portfolio-item">
@@ -126,7 +129,9 @@
                 </div>
                 <div class="modal-body">
                   <img src="images/home-insurance-crisis.PNG" class="mw-100" alt="Preview of map.">
-                  <h5>Visit <a target="_blank" href="https://therevolvingdoorproject.org/mapping-the-home-insurance-crisis/">map</a></h5>
+                  <h5>Visit <a target="_blank" href="https://therevolvingdoorproject.org/mapping-the-home-insurance-crisis/">project</a> (includes all maps and tables)</h5>
+                  <h5>Visit <a target="_blank" href="https://kwstancil.github.io/FIO-home-insurance-map/">ZIP code-level map</a></h5>
+                  <h5>Visit <a target="_blank" href="https://kwstancil.github.io/SBC-home-insurance-map/">county-level map</a></h5>
                 </div>
                 <!-- <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -146,7 +151,7 @@
               <div class="card-body">
                 <h4 class="card-title">Global Covid-19 Vaccine Apartheid</h4>
                 <p class="card-text">
-                  This storymap depicts unequal access to Covid-19 vaccines around the world, highlights whether
+                  This storymap* depicts unequal access to Covid-19 vaccines around the world, highlights whether
                   governments supported or opposed an initiative to temporarily suspend intellectual property
                   restrictions to boost the supply of lifesaving doses, shows where untapped
                   vaccine production potential exists, and explores efforts to expand generic manufacturing.
@@ -341,7 +346,7 @@
                 </div>
                 <div class="modal-body">
                   <img src="images/lexington-landlords.PNG" class="mw-100" alt="Preview of map.">
-                  <h5>Visit <a target="_blank" href ="https://drive.google.com/file/d/1rjO2DJUa1WVYI0k0MtS71k4JsU8EOSnd/view?usp=sharing">map</a></h5>
+                  <h5>Visit <a target="_blank" href ="https://drive.google.com/file/d/1rjO2DJUa1WVYI0k0MtS71k4JsU8EOSnd/view?usp=sharing">project</a></h5>
                 </div>
                 <!-- <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -358,6 +363,9 @@
     <section id="writing" class="bg-light">
       <div class="container text-center">
         <h2>Selected articles</h2>
+        <p></p>
+        <h4>(Click on an image to explore further)</h4>
+        <p></p>
         <div class="row">
 
           <div class="col-lg-4 col-md-6 portfolio-item">
@@ -823,7 +831,7 @@
                 where I was a staff writer from 2020 to 2023. I'm now a senior researcher at the <a target="_blank" href = "https://therevolvingdoorproject.org/author/kenny-stancil/">Revolving Door Project</a>, a public interest watchdog group.
               </p>
               <p class="lead">
-                I'm passionate about building an egalitarian, democratic, and sustainable society. I also enjoy spending time outdoors and keeping up with my beloved Colorado sports teams.
+                I'm passionate about contributing to the creation of a more egalitarian, democratic, and sustainable society. I also enjoy spending time outdoors and keeping up with my beloved Colorado sports teams.
                 I returned to my home state in 2022.
               </p>
             </div>
@@ -854,8 +862,11 @@
               <li class="">
                 <i class="fa fa-twitter mr-2"></i><a target="_blank" href = "https://twitter.com/kenny_stancil"> @kenny_stancil</a>
               </li>
-              <li class="mr-2">
+              <li class="">
                 <i class="fa fa-github mr-2"></i><a target="_blank" href = "https://github.com/kwstancil"> kwstancil</a>
+              </li>
+              <li class="">
+                <i class="fa fa-linkedin mr-2"></i><a target="_blank" href = "https://www.linkedin.com/in/kenny-stancil-31386b284/"> Kenny Stancil</a>
               </li>
               <li class="">
                 <i class="fa fa-envelope mr-2"></i><a target="_blank" href = "mailto:stancil.kenny@gmail.com"> stancil.kenny@gmail.com</a>
