--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                   and Table 9 shows statewide average nonrenewal rates.
                 </p>
                   <p>
-                  Both maps were made by joining Census Bureau shapefiles (i.e., ZIP code tabulation areas and counties) 
+                  Both maps were made by joining Census Bureau shapefiles (ZIP code tabulation areas and counties) 
                   with geocoded ZIP code- and county-level insurance data. The resulting GeoJSON files were converted to PM tiles 
                   and displayed using MapLibre. The corresponding tables were created in Datawrapper.
                   </p>
@@ -173,7 +173,7 @@
                   idle mRNA manufacturing capacity (Doctors Without Borders and the Access IBSA project), and participants in the WHO-led mRNA vaccine technology transfer hub (Medicines Patent Pool).
                 </p>
                 <p>
-                  *Awarded first place in the annual student dynamic map competition at the 2022 North American Cartographic Information Society (NACIS) meeting
+                  *Awarded first place in the annual student dynamic map competition at the 2022 North American Cartographic Information Society meeting
                 </p>
               </div>
             </div>
