--- a/index.html
+++ b/index.html
@@ -115,13 +115,18 @@
                   by Treasury's Federal Insurance Office, reveals how the U.S. home insurance crisis has unfolded from
                   2018 to 2022 according to seven metrics of insurance availability and affordability
                   (nonrenewal rates, nonpayment cancellation rates, other cancellation rates, claim frequency rates, 
-                  average claim amounts, paid loss ratios, and average premiums). Tables 1 through 7 show which ZIP codes
+                  average claim amounts, paid loss ratios, and average premiums).
+                  <p>
+                  Tables 1 through 7 show which ZIP codes
                   experienced the biggest percent increases in each of the seven aforementioned metrics (there are also links
-                  to full databases that are sortable and searchable). Map 2, built using county-level data obtained through
+                  to full databases that are sortable and searchable).
+                  </p>
+                  <p>
+                  Map 2, built using county-level data obtained through
                   a Senate Budget Committee investigation, depicts how nonrenewal rates changed from 2018 to 2023.
                   Table 8 shows which counties experienced the largest growth in nonrenewal rates during that period,
                   and Table 9 shows statewide average nonrenewal rates.
-                </p>
+                  </p>
                   <p>
                   Both maps were made by joining Census Bureau shapefiles (ZIP code tabulation areas and counties) 
                   with geocoded ZIP code- and county-level insurance data. The resulting GeoJSON files were converted to PM tiles 
