--- a/index.html
+++ b/index.html
@@ -857,7 +857,7 @@
           <div class="col-md-6">
             <h3>Skills</h3>
             <dl>
-              <dt>Data wrangling</dt>
+              <dt>Data Wrangling</dt>
               <dd>Excel, LibreOffice Calc for data cleaning, analysis, and preparation</dd>
               <dt>GIS</dt>
               <dd>ArcGIS, QGIS for data analysis, manipulation, and format conversion</dd>
