--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                   average claim amounts, paid loss ratios, and average premiums).
                   <p>
                   Tables 1 through 7 show which ZIP codes
-                  experienced the biggest percent increases in each of the seven aforementioned metrics (there are also links
+                  experienced the biggest increases in each of the seven aforementioned metrics (there are also links
                   to full databases that are sortable and searchable).
                   </p>
                   <p>
