--- a/index.html
+++ b/index.html
@@ -724,8 +724,8 @@
               <div class="card-body">
                 <h4 class="card-title">Why Biden Should Pardon the IRS Whistleblower Who Leaked Trump's Taxes</h4>
                 <p class="card-text">
-                  This article, published in Slate on March 25, 2024, urged Joe Biden to pardon IRS whistleblower Charles Littlejohn—to rectify his disproportionate sentence, and because foregrounding billionaires' unchecked 
-                  economic and political power in the 2024 presidential election would be good politics.
+                  This article, published in Slate on March 25, 2024, urged Joe Biden to pardon IRS whistleblower Charles Littlejohn—as a matter of justice, given his disproportionate sentence, and because foregrounding billionaires' unchecked 
+                  economic and political power in the 2024 presidential election would have been good politics.
                 </p>
               </div>
             </div>
