--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             <div class="modal-dialog modal-lg">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h2 class="modal-title" id="exampleModalLabel">Global Covid-19 Vaccine Apartheid Storymap</h2>
+                  <h2 class="modal-title" id="exampleModalLabel">Global Covid-19 Vaccine Apartheid</h2>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -362,7 +362,7 @@
                 </div>
                 <div class="modal-body">
                   <img src="images/lexington-landlords.PNG" class="mw-100" alt="Preview of map.">
-                  <h5>Visit <a target="_blank" href ="https://drive.google.com/file/d/1rjO2DJUa1WVYI0k0MtS71k4JsU8EOSnd/view?usp=sharing">project</a></h5>
+                  <h5>Visit <a target="_blank" href ="https://drive.google.com/file/d/1zn6QrDyoLrR_cdiCxYkQkMnfzjz_YWVn/view?usp=sharing">project</a></h5>
                 </div>
                 <!-- <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
