--- a/index.html
+++ b/index.html
@@ -864,7 +864,7 @@
               <dd>PostGIS/SQL for data querying</dd>
               <dt>Web Mapping</dt>
               <dd>
-                Mapbox, MapLibre, Leaflet, D3, Carto
+                Mapbox, MapLibre, Leaflet, D3, Carto, Protomaps
               </dd>
               <dt>Other Data Visualization Tools</dt>
               <dd>
